[gd_scene load_steps=3 format=1]

[ext_resource path="res://themes/Vert.tres" type="Theme" id=1]
[ext_resource path="res://Title/Title.gd" type="Script" id=2]

[node name="Title" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 2 )

[node name="panel" type="PanelContainer" parent="."]

anchor/left = 3
anchor/top = 1
anchor/right = 3
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 61.0
margin/top = 155.0
margin/right = -61.0
margin/bottom = 45.0

[node name="box" type="VBoxContainer" parent="panel"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 4.0
margin/right = 118.0
margin/bottom = 106.0
alignment = 0

[node name="Continue" type="Button" parent="panel/box"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 114.0
margin/bottom = 22.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Continue"
flat = false

[node name="New" type="Button" parent="panel/box"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 26.0
margin/right = 114.0
margin/bottom = 48.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "New World"
flat = false

[node name="Load" type="Button" parent="panel/box"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 52.0
margin/right = 114.0
margin/bottom = 74.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Load World"
flat = false

[node name="Quit" type="Button" parent="panel/box"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 78.0
margin/right = 114.0
margin/bottom = 102.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Quit to Desktop"
flat = false

[connection signal="pressed" from="panel/box/Continue" to="." method="_on_Continue_pressed"]

[connection signal="pressed" from="panel/box/New" to="." method="_on_New_pressed"]

[connection signal="pressed" from="panel/box/Load" to="." method="_on_Load_pressed"]

[connection signal="pressed" from="panel/box/Quit" to="." method="_on_Quit_pressed"]


